Tests/ShouldFail/Try34.adl
CONTEXT Try34

leidtTot :: Onderzoek * Rapport
PROCESS Toezichthouden
  ROLE Inspecteur MAINTAINS "Vaststellen Rapport"
  RULE "Vaststellen Rapport" : I[Onderzoek] |- leidtTot
ENDPROCESS 


{- Het spreekt voor zich dat de regel niet goed is getypeerd. Echter, ampersand versie 1072 klaagt hier niet over.... -}

ENDCONTEXT 